--- a/src/gui/application/loginScreen.fxml
+++ b/src/gui/application/loginScreen.fxml
@@ -20,7 +20,7 @@
          <font>
             <Font name="Roboto Light" size="15.0" />
          </font></JFXPasswordField>
-      <JFXButton fx:id="buttonLogInScreenLogIn" contentDisplay="RIGHT" layoutX="624.0" layoutY="306.0" onAction="#buttonLogInScreenLogInPressed" prefHeight="34.0" prefWidth="96.0" text=" Login" textAlignment="RIGHT" AnchorPane.topAnchor="400.0">
+      <JFXButton fx:id="buttonLogInScreenLogIn" buttonType="RAISED" contentDisplay="RIGHT" layoutX="624.0" layoutY="306.0" onAction="#buttonLogInScreenLogInPressed" prefHeight="34.0" prefWidth="96.0" text=" Login" textAlignment="RIGHT" AnchorPane.topAnchor="400.0">
          <graphic>
             <ImageView fitHeight="24.0" fitWidth="24.0">
                <image>
