--- a/src/gui/application/projectList.fxml
+++ b/src/gui/application/projectList.fxml
@@ -14,6 +14,11 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1240.0" style="-fx-background-color: #737373;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.application.ProjectListController">
    <children>
+      <Label fx:id="labelProjectList" prefHeight="50.0" prefWidth="277.0" style="-fx-background-color: #FFA500;" text="Projektliste">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
       <AnchorPane layoutX="876.0">
          <children>
             <Label fx:id="labelUser" prefHeight="50.0" prefWidth="364.0" style="-fx-background-color: #cdcdcd;" text="Benutzer">
@@ -42,7 +47,7 @@
                         <Font size="15.0" />
                      </font>
                   </Label>
-                  <JFXTextField fx:id="textFieldProjectName" layoutX="112.0" layoutY="4.0" prefHeight="29.0" prefWidth="507.0">
+                  <JFXTextField fx:id="textFieldProjectName" layoutX="112.0" layoutY="4.0" prefHeight="29.0" prefWidth="475.0">
                      <font>
                         <Font size="15.0" />
                      </font>
@@ -71,6 +76,24 @@
                         </ImageView>
                      </graphic>
                   </JFXButton>
+                  <JFXButton fx:id="buttonEditProjectName" contentDisplay="GRAPHIC_ONLY" layoutX="589.0" layoutY="1.0" onAction="#buttonEditProjectNamePressed" prefHeight="25.0" prefWidth="25.0" ripplerFill="#737373" text="SaveProjectName">
+                     <graphic>
+                        <ImageView fx:id="buttonEditProjectNameIcon" fitHeight="25.0" fitWidth="25.0">
+                           <image>
+                              <Image url="@../resources/Icons/compose.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </JFXButton>
+                  <JFXButton fx:id="buttonEditProjectDescription" contentDisplay="GRAPHIC_ONLY" layoutX="589.0" layoutY="61.0" onAction="#buttonEditProjectDescriptionPressed" prefHeight="25.0" prefWidth="25.0" ripplerFill="#737373" text="SaveTaskName">
+                     <graphic>
+                        <ImageView fx:id="buttonEditProjectDescriptionIcon" fitHeight="25.0" fitWidth="25.0">
+                           <image>
+                              <Image url="@../resources/Icons/compose.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </JFXButton>
                </children></AnchorPane>
         </content>
       </ScrollPane>
@@ -86,11 +109,6 @@
             <Font size="1.0" />
          </font>
       </JFXButton>
-      <Label prefHeight="50.0" prefWidth="277.0" style="-fx-background-color: #FFA500;" text="Projektliste">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </Label>
       <JFXButton fx:id="buttonBack" contentDisplay="GRAPHIC_ONLY" layoutX="207.0" maxHeight="58.0" minHeight="50.0" onAction="#buttonBackPressed" prefHeight="50.0" prefWidth="70.0" ripplerFill="#737373" text="Button">
          <graphic>
             <ImageView fitHeight="55.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
