--- a/src/gui/application/projectList.fxml
+++ b/src/gui/application/projectList.fxml
@@ -57,7 +57,7 @@
                         <Font size="15.0" />
                      </font>
                   </Label>
-                  <JFXTextArea fx:id="textAreaProjectDescription" layoutX="14.0" layoutY="90.0" prefHeight="175.0" prefWidth="605.0" />
+                  <JFXTextArea fx:id="textAreaProjectDescription" layoutX="14.0" layoutY="90.0" prefHeight="175.0" prefWidth="605.0" stylesheets="@application.css" />
                   <Label layoutX="19.0" layoutY="291.0" text="Teilnehmer:">
                      <font>
                         <Font size="15.0" />
