--- a/src/gui/application/loginScreen.fxml
+++ b/src/gui/application/loginScreen.fxml
@@ -50,11 +50,16 @@
             </ImageView>
          </graphic>
       </JFXButton>
-      <ImageView fitHeight="128.0" fitWidth="128.0" layoutX="556.0" layoutY="68.0">
+      <Label fx:id="infoLabelLogInScreen" layoutX="520.0" layoutY="244.0" prefHeight="34.0" prefWidth="200.0" textAlignment="CENTER" textFill="RED" />
+      <ImageView fitHeight="150.0" fitWidth="297.0" layoutX="472.0" layoutY="33.0" preserveRatio="true">
          <image>
-            <Image url="@../resources/Icons/Blauge-Logo.png" />
+            <Image url="@../resources/Icons/BLAUGE_Labs_Logo.png" />
          </image>
       </ImageView>
-      <Label fx:id="infoLabelLogInScreen" layoutX="520.0" layoutY="244.0" prefHeight="34.0" prefWidth="200.0" textAlignment="CENTER" textFill="RED" />
+      <ImageView fitHeight="35.0" fitWidth="200.0" layoutX="520.0" layoutY="166.0">
+         <image>
+            <Image url="@../resources/Icons/KANBAN_Schriftzug.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
