Scrollbar auf VBox umgestellt

--- a/src/gui/application/mainFrame.fxml
+++ b/src/gui/application/mainFrame.fxml
@@ -278,7 +278,7 @@
                   <VBox fx:id="mansoryPaneToDo" prefHeight="590.0" prefWidth="271.0" />
                   <VBox fx:id="mansoryPaneDoing" layoutX="272.0" prefHeight="590.0" prefWidth="271.0" />
                   <VBox fx:id="mansoryPaneFinished" layoutX="543.0" prefHeight="584.0" prefWidth="271.0" />
-                  <Label layoutX="272.0" prefHeight="590.0" prefWidth="271.0" style="-fx-background-color: #888888;" />
+                  <Label fx:id="labelMasonryPaneOptic" layoutX="272.0" prefHeight="590.0" prefWidth="271.0" style="-fx-background-color: #888888;" />
                </children>
             </AnchorPane>
         </content>
