--- a/src/gui/application/mainFrame.fxml
+++ b/src/gui/application/mainFrame.fxml
@@ -2,7 +2,6 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXColorPicker?>
-<?import com.jfoenix.controls.JFXListView?>
 <?import com.jfoenix.controls.JFXMasonryPane?>
 <?import com.jfoenix.controls.JFXTextArea?>
 <?import com.jfoenix.controls.JFXTextField?>
@@ -48,7 +47,7 @@
         
         
         
-          <AnchorPane fx:id="anchorPaneTaskInformation" minHeight="0.0" minWidth="0.0" prefHeight="700.0" prefWidth="349.0" style="-fx-background-color: #FFA500;">
+          <AnchorPane fx:id="anchorPaneTaskInformation" minHeight="0.0" minWidth="0.0" prefHeight="600.0" prefWidth="349.0" style="-fx-background-color: #FFA500;">
                <children>
                <AnchorPane fx:id="anchorPaneTaskInformation1" minHeight="0.0" minWidth="0.0" prefHeight="400.0" prefWidth="349.0" style="-fx-background-color: #FFA500;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
@@ -120,7 +119,7 @@
                   </children>
             </AnchorPane>
             
-            <AnchorPane fx:id="anchorPaneTaskInformation2" layoutY="400.0" minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="349.0" style="-fx-background-color: orange;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="400.0">
+            <AnchorPane fx:id="anchorPaneTaskInformation2" layoutY="400.0" minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="349.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="400.0">
                <children>
                
                   <Label fx:id="labelTags" layoutX="5.0" layoutY="0.0" prefHeight="25.0" prefWidth="100.0" text="Tags:">
@@ -128,7 +127,7 @@
                         <Font name="Roboto Light" size="15.0" />
                      </font>
                      <graphic>
-                        <ImageView fitHeight="25.0" fitWidth="25.0">
+                        <ImageView fx:id="tagIcon" fitHeight="25.0" fitWidth="25.0">
                            <image>
                               <Image url="@../resources/Icons/pricetags.png" />
                            </image>
@@ -154,7 +153,7 @@
             </AnchorPane>
             
             
-                  <AnchorPane fx:id="anchorPaneTaskInformation3" layoutY="400.0" minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="349.0" style="-fx-background-color: orange;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                  <AnchorPane fx:id="anchorPaneTaskInformation3" layoutY="500.0" minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="349.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                <children>
                   <Label fx:id="labelComments" layoutX="5.0" layoutY="0.0" prefHeight="25.0" prefWidth="120.0" text="Kommentare:">
                      <font>
@@ -168,7 +167,6 @@
                         </ImageView>
                      </graphic>
                   </Label>
-                  <JFXListView fx:id="listViewComments" layoutX="5.0" layoutY="60.0" prefHeight="100.0" prefWidth="339.0" />
                   
                   
                   <JFXTextField fx:id="textFieldComments" focusColor="#b71c1c" layoutX="5.0" layoutY="25.0" prefWidth="300.0">
@@ -176,7 +174,7 @@
                         <Font name="Roboto Light" size="15.0" />
                      </font>
                   </JFXTextField>
-                  <JFXButton fx:id="buttonAddComment" buttonType="RAISED" contentDisplay="GRAPHIC_ONLY" layoutX="305.0" layoutY="25.0" prefHeight="25.0" prefWidth="25.0" ripplerFill="#737373">
+                  <JFXButton fx:id="buttonAddComment" buttonType="RAISED" contentDisplay="GRAPHIC_ONLY" layoutX="305.0" layoutY="25.0" onAction="#buttonAddCommentPressed" prefHeight="25.0" prefWidth="25.0" ripplerFill="#737373">
                      <graphic>
                         <ImageView fitHeight="25.0" fitWidth="25.0">
                            <image>
@@ -185,6 +183,7 @@
                         </ImageView>
                      </graphic>
                   </JFXButton>
+                  <JFXMasonryPane fx:id="mansoryPaneComments" layoutX="5.0" layoutY="60.0" prefHeight="100.0" prefWidth="300.0" />
                   </children>
             </AnchorPane>
             
