Neue Klasse GuiTask erstellt, die von Label erbt, sodass diese klasse im Mansorypane benutzt werden kann und die taskinformationen direkt im label gespeichert sind

--- a/src/gui/application/mainFrame.fxml
+++ b/src/gui/application/mainFrame.fxml
@@ -41,7 +41,7 @@
             <Font name="Roboto Light" size="15.0" />
          </font>
       </MenuButton>
-      <ScrollPane hbarPolicy="NEVER" layoutX="876.0" layoutY="100.0" prefHeight="620.0" prefWidth="364.0">
+      <ScrollPane fx:id="scrollPaneTaskInformation" hbarPolicy="NEVER" layoutX="876.0" layoutY="100.0" prefHeight="620.0" prefWidth="364.0">
         <content>
         
         
